// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen fields config import-export] should create the fields: the fields have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ field [Environment/cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen fields config import-export] should skip the same fields: the fields have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= field [Environment/cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen fields config import-export] should throw exception when new fields to import miss mandatory properties fields: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - field [Environment/cfgObjectTest]:
    - fieldType
    - isNullable
    - isPrimaryKey
    - isUnique
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen fields config import-export] should throw exception when updating fields with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - field [Environment/cfgObjectTest]:
    - isNullable
    - isPrimaryKey
    - isUnique
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen fields config import-export] should update the modified fields: the modified fields have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ field [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
